# mu

./: .bmad  .gitignore  .murc.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  codebase.txt  mu.spec  output.omg  pyproject.toml  skeleton_extractor.py  triage.py
.beads/: issues.jsonl
.claude/: CLAUDE.md
.claude/agents/: AGENTS.md  coder.md  mu-agent.md  planner.md  reviewer.md  tester.md
.claude/commands/: code.md  flow.md  plan.md  review.md  ship.md  test.md
.github/: dependabot.yml
.github/workflows/: build-binary.yml  ci.yml  codeql.yml  mu-diff.yml  publish.yml  release-mu-core.yml  release.yml  rust-core.yml
archive/mu-daemon-server/: main.rs
archive/mu-python/: config.py  errors.py  logging.py
archive/mu-viz/: package-lock.json  package.json  vite.config.ts
archive/tests-python/: __init__.py
benches/: __init__.py  bench_rust_vs_python.py
data/sigma-all/: merge_manifest.json
data/sigma-csharp/: repos.json
data/sigma-go/: repos.json
data/sigma-java/: repos.json
data/sigma-rust/: repos.json
docs/: .gitignore  CLI.md  README.md  bmm-workflow-status.yaml  cli_audit_results.md  context-extraction-accuracy.tasks.md  mu-agent.tasks.md  mu-sigma.tasks.md  prd.md  project-scan-report.json  project_context.md  test-detection.tasks.md  uncommitted-changes.md  ux-improvements.tasks.md  vibe-issues-fixes.tasks.md
docs/INITIAL + PRD/: MU-Claude-Code-Kickoff.md  MU-PRD-v1.docx  mu-prd-v3-divine.md
docs/adr/: 0001-use-tree-sitter-for-parsing.md  0002-sigil-based-output-format.md  0003-litellm-for-llm-integration.md  0004-vector-embeddings-for-semantic-search.md  0005-node-resolution-disambiguation.md  README.md
docs/analysis/: product-brief-mu-sigma-2025-12-10.md
docs/api/: README.md  cli.md  python.md
docs/archive/: kernel-implementation-plan.md
docs/epics/: 01-vector-layer.md  02-muql-parser.md  02-muql-parser.tasks.md  03-smart-context.tasks.md  05-export-formats.md  05-export-formats.tasks.md  07-mu-contracts.tasks.md  README.md
docs/future-improvements/: README.md  mu-conductor-architecture.md  muql-natural-language.md
docs/guides/: getting-started.md
docs/issues/: BUGS_FOUND.md  mcp-db-lock-issues.md  mcp-testing-bugs.md  mcp-tool-fixes.md  other-bugs-found.md  testing-bugs-found.md  testing-findings.md
docs/prd/: BUG_FIXES_Q4_2025.tasks.md  CLI_REFACTOR.md  CONTRACTS_RESURRECTION_ROADMAP.md  GRAPH_REASONING.md  GRAPH_REASONING.tasks.md  MU-ALPHA-POLISH.md  MU_INTELLIGENCE_LAYER.md  MU_TRIMMING_PHASE2_VIBES_CLI.md  MU_TRIMMING_PHASE3_MCP_REFACTOR.md  MU_V1_LAUNCH_POLISH.md  MU_V1_LAUNCH_POLISH.tasks.md  MU_V2_AUDIT_FIXES.md  OMEGA_COMPRESS_INTEGRATION.md  PROJECT_OMEGA_IMPLEMENTATION.md  RUST_CORE.handoff.md  RUST_DAEMON_MIGRATION.md  RUST_DAEMON_MIGRATION_HANDOFF.md  RUST_ENHANCEMENTS.tasks.md  RUST_MUQL_GAPS.md  mu-rust-native.md  mu-v2-bug-fixes.md  prd-terse-muql.md  prd-terse-muql.tasks.md  prd-test-detection.md  prd2-node-resolution.md  prd2-node-resolution.tasks.md  prd3-output-formatting.md  prd3-output-formatting.tasks.md  prd4-graph-context.md  prd4-graph-context.tasks.md
docs/security/: README.md  SECURITY.md  threat-model.md
docs/tasks/: serve-wiring.tasks.md
examples/: README.md
mu-cli/: .gitignore  .murc.toml  Cargo.toml
mu-cli/src/: cache.rs  config.rs  constants.rs  main.rs  mubase.rs  tsconfig.rs
mu-cli/src/commands/: bootstrap.rs  completions.rs  coverage.rs  deps.rs  diff.rs  doctor.rs  embed.rs  export.rs  graph.rs  grok.rs  history.rs  mod.rs  patterns.rs  query.rs  read.rs  review.rs  search.rs  serve.rs  status.rs  why.rs
mu-cli/src/commands/compress/: formatter.rs  loader.rs  mod.rs  models.rs
mu-cli/src/commands/mcp/: mod.rs  server.rs
mu-cli/src/commands/vibes/: conventions.rs  mod.rs  omg.rs  sus.rs  vibe.rs  wtf.rs  yolo.rs  zen.rs
mu-cli/src/output/: csv.rs  json.rs  mod.rs  mu.rs  table.rs  tree.rs
mu-cli/tests/: integration_tests.rs
mu-core/: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
mu-core/benches/: parsing.rs
mu-core/python/mu/: __init__.py  _core.pyi
mu-core/src/: graph.rs  incremental.rs  lib.rs  scanner.rs  types.rs
mu-core/src/differ/: changes.rs  comparator.rs  mod.rs
mu-core/src/exporter/: CLAUDE.md  json.rs  markdown.rs  mod.rs  mu_format.rs
mu-core/src/parser/: CLAUDE.md  csharp.rs  go.rs  helpers.rs  java.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
mu-core/src/reducer/: complexity.rs  mod.rs  rules.rs
mu-core/src/security/: mod.rs  patterns.rs  redact.rs
mu-daemon/: Cargo.toml
mu-daemon/python/: CLAUDE.md  lifecycle.py
mu-daemon/src/: embeddings.rs  lib.rs  main.rs
mu-daemon/src/context/: extractor.rs  mod.rs
mu-daemon/src/muql/: executor.rs  grammar.pest  mod.rs  parser.rs  planner.rs
mu-daemon/src/server/: http.rs  mcp.rs  mod.rs  projects.rs  state.rs  websocket.rs
mu-daemon/src/storage/: edges.rs  embeddings.rs  graph_engine.rs  migrations.rs  mod.rs  mubase.rs  nodes.rs  schema.rs
mu-daemon/src/watcher/: mod.rs
mu-daemon/tests/: concurrent_access.rs
mu-embeddings/: Cargo.toml
mu-embeddings/models/mu-sigma-v2/: README.md  config.json
mu-embeddings/src/: error.rs  lib.rs  model.rs  tokenizer.rs
mu-sigma/: CLAUDE.md  __init__.py  answers.py  cli.py  config.py  frameworks.py  llm_client.py  pairs.py  repos.py  train.py  validate.py
mu-viz/: index.html
mu-viz/src/: index.css
scripts/: install.sh
src/mu/: __init__.py  _core.pyi  cli.py  client.py  config.py  describe.py  errors.py  logging.py  output.py  paths.py
tests/: CLAUDE.md
tests/benchmarks/: test_omega_compression.py  test_omega_pattern_stress.py  test_scanner_benchmark.py
tests/daemon/: __init__.py  test_contracts_endpoint.py
tests/integration/: __init__.py  test_concurrency.py  test_context_integration.py  test_muql_integration.py  test_node_resolution.py  test_omega_integration.py
tests/unit/: __init__.py  test_agent.py  test_cli_commands.py  test_client.py  test_config.py  test_context.py  test_contracts.py  test_daemon.py  test_describe.py  test_diff.py  test_embeddings.py  (+26 more)
(+575 files in other folders)
