[workspace]
resolver = "2"
members = [
    "mu-cli",
    "mu-core",
    "mu-daemon",
    "mu-embeddings",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Yavor Kangalov <0ximu@proton.me>"]
repository = "https://github.com/0ximu/mu"

[workspace.dependencies]
# Internal crates
mu-core = { path = "mu-core", default-features = false }
mu-daemon = { path = "mu-daemon" }
mu-embeddings = { path = "mu-embeddings" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
colored = "2"
tabled = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
