[project]
name = "mu-cli"
version = "0.1.0"
description = "Machine Understanding - Semantic compression format for AI-native development"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Yavor Kangalov", email = "yavor@dominaite.com" }
]
keywords = ["llm", "ai", "code-analysis", "semantic-compression", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.23.0",
    "litellm>=1.0.0",
    "diskcache>=5.6.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "duckdb>=1.0.0",
    "lark>=1.1.0",
    "pyperclip>=1.8.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.90.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
]

[project.scripts]
mu = "mu.cli:main"

[project.urls]
Homepage = "https://github.com/dominaite/mu"
Documentation = "https://github.com/dominaite/mu#readme"
Repository = "https://github.com/dominaite/mu.git"
Issues = "https://github.com/dominaite/mu/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mu"]

[tool.hatch.build.targets.wheel.force-include]
"src/mu/data" = "mu/data"

[tool.hatch.build.targets.sdist]
include = [
    "src/mu/**/*.py",
    "src/mu/**/*.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mu"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/mu"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
