[project]
name = "mu-cli"
version = "0.1.0"
description = "Machine Understanding - Semantic compression format for AI-native development"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Yavor Kangalov", email = "yavor@dominaite.com" }
]
keywords = ["llm", "ai", "code-analysis", "semantic-compression", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    # Core CLI and config
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pyperclip>=1.8.0",
    # Parsers (tree-sitter)
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.23.0",
    # Graph database
    "duckdb>=1.0.0",
    "lark>=1.1.0",
    # HTTP client (for daemon communication)
    "httpx>=0.25.0",
    # Token counting
    "tiktoken>=0.5.0",
    # MCP server (kept in core per user request)
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
# Rust performance layer - install with: pip install mu-cli[rust]
rust = [
    "mu-core>=0.1.0",
]
# LLM summarization - install with: pip install mu-cli[llm]
llm = [
    "litellm>=1.0.0",
    "diskcache>=5.6.0",
]
# Vector embeddings for semantic search - install with: pip install mu-cli[embeddings]
embeddings = [
    "sentence-transformers>=5.1.2",
]
# Training data pipeline - install with: pip install mu-cli[sigma]
sigma = [
    "anthropic>=0.40.0",
    "datasets>=4.4.1",
    "accelerate>=0.26.0",
    "sentence-transformers>=5.1.2",
]
# Daemon server - install with: pip install mu-cli[daemon]
daemon = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "watchfiles>=0.21.0",
]
# All optional features - install with: pip install mu-cli[all]
all = [
    "mu-cli[rust,llm,embeddings,sigma,daemon]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.90.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pyinstaller>=6.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
mu = "mu.cli:main"

[project.urls]
Homepage = "https://github.com/dominaite/mu"
Documentation = "https://github.com/dominaite/mu#readme"
Repository = "https://github.com/dominaite/mu.git"
Issues = "https://github.com/dominaite/mu/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mu"]

[tool.hatch.build.targets.wheel.force-include]
"src/mu/data" = "mu/data"

[tool.hatch.build.targets.sdist]
include = [
    "src/mu/**/*.py",
    "src/mu/**/*.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/mu/cli.py" = ["E402"]  # dotenv must load before other imports

[tool.ruff.lint.isort]
known-first-party = ["mu"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "regression: marks tests as regression tests for bugs",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "stress: marks tests as stress/load tests (deselect with '-m \"not stress\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/mu"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
# Development dependencies (use: uv sync --group dev)
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.90.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pyinstaller>=6.0.0",
    "types-PyYAML>=6.0.0",
]
# Rust performance layer
rust = [
    "maturin>=1.0.0",
    "mu-core>=0.1.0",
]
# LLM summarization
llm = [
    "litellm>=1.0.0",
    "diskcache>=5.6.0",
]
# Vector embeddings
embeddings = [
    "sentence-transformers>=5.1.2",
]
# Sigma training pipeline
sigma = [
    "anthropic>=0.40.0",
    "datasets>=4.4.1",
    "accelerate>=0.26.0",
    "sentence-transformers>=5.1.2",
]
# Daemon server
daemon = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "watchfiles>=0.21.0",
]

[tool.uv]
# Default to all groups for local development (full feature set)
default-groups = ["dev", "rust", "llm", "embeddings", "sigma", "daemon"]

[tool.uv.sources]
# mu-core is built locally from mu-core/ subdirectory (only when rust extra requested)
mu-core = { path = "mu-core", extra = "rust" }
