[package]
name = "mu-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance Rust core for MU (Machine Understanding)"
authors = ["Yavor Kangalov <yavor@dominaite.com>"]
repository = "https://github.com/dominaite/mu"
keywords = ["llm", "code-analysis", "parsing", "tree-sitter"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
once_cell = "1.20"
thiserror = "1.0"
petgraph = "0.6"

# Tree-sitter core and language grammars
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
