[package]
name = "mu-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance Rust core for MU (Machine Understanding)"
authors = ["Yavor Kangalov <0ximu@proton.me>"]
repository = "https://github.com/0ximu/mu"
keywords = ["llm", "code-analysis", "parsing", "tree-sitter"]

[lib]
name = "mu_core"
crate-type = ["rlib"]

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
once_cell = "1.20"
thiserror = "1.0"
petgraph = "0.6"
ignore = "0.4"          # Fast parallel file walking with gitignore support
xxhash-rust = { version = "0.8", features = ["xxh3"] }  # Fast file hashing
bytecount = "0.6"       # Fast byte counting for line counting

# Tree-sitter core and language grammars
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
tempfile = "3.10"       # Temporary directories for testing
