[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mu-core"
version = "0.1.0"
description = "High-performance Rust core for MU (Machine Understanding)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Yavor Kangalov", email = "yavor@dominaite.com" }
]
keywords = ["llm", "code-analysis", "parsing", "tree-sitter", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mu._core"
# For development: run `maturin develop` from mu-core directory
# The .so file will be placed in site-packages, but the main mu package
# is served from src/mu/ via editable install. After building, copy
# the .so file to src/mu/_core.abi3.so for development.
#
# For CI/production builds: maturin build will create a wheel that
# can be installed alongside the main mu package.
