[package]
name = "mu-embeddings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Native embedding inference for MU using mu-sigma-v2 model"
authors = ["Yavor Kangalov <0ximu@proton.me>"]
repository = "https://github.com/0ximu/mu"
keywords = ["embeddings", "semantic-search", "bert", "candle", "ml"]

[lib]
name = "mu_embeddings"
crate-type = ["rlib"]

[features]
default = []
# Enable CUDA support for GPU inference
cuda = ["candle-core/cuda"]
# Enable Metal support for Apple Silicon
metal = ["candle-core/metal"]

[dependencies]
# Candle - Hugging Face's Rust ML framework
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Tokenization
tokenizers = "0.20"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
approx = "0.5"
